Prod-EU/force-app/main/default/objects/Sample_Program_Config__mdt/Sample_Program_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration file for Sample Program</description>
    <label>Sample Program Config</label>
    <pluralLabel>Sample Program Configs</pluralLabel>
</CustomObject>