Prod-EU/force-app/main/default/objects/Sample_Program_Config__mdt/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country Code</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>