Prod-EU/force-app/main/default/objects/Sample_Program_Config__mdt/fields/Sample_Type__c.field-meta.xml
<CustomField>
    <fullName>Sample_Type__c</fullName>
    <label>Sample Type</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>