Prod-EU/force-app/main/default/objects/Sample_Program_Config__mdt/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <label>SKU</label>
    <length>25</length>
    <type>Text</type>
</CustomField>